# oio-docs

./: .gitignore  .travis.yml  README.md  README.rst  components.json  test-requirements.txt  tox.ini
doc/: Doxyfile-api-c  Doxyfile-api-java  components.json  conf.py  contents.rst  index.rst  setup.cfg
doc/_static/: custom.css  sidebar-fold.js  styles.css
doc/_static/images/: sidebar-fold.js
doc/_templates/: globaltoc.html  layout.html  search.html
doc/admin-guide/: setup.cfg
doc/admin-guide/source/: conf.py  configuration.rst  configuration_namespace.rst  configuration_storagepolicies.rst  index.rst  (+27 more)
doc/api/: index.rst
doc/cli-reference/: setup.cfg
doc/deployment-guide/: setup.cfg
doc/deployment-guide/source/: conf.py  deployment_overview.rst  index.rst
doc/docker-image/: setup.cfg
doc/install-guide/: setup.cfg
doc/install-guide-x1/: setup.cfg
doc/install-guide-x1-raspbian/: setup.cfg  setup.py
doc/install-guide-x3-rpi-ubuntu/: setup.cfg
doc/install-guide-x3-rpi-ubuntu/source/: conf.py  index.rst  installation.rst  prerequisites.rst  userguide.rst
doc/install-guide/source/: conf.py  index.rst  installation.rst  overview.rst  prerequisites.rst
doc/install-swift-s3/: setup.cfg
doc/project-guide/: setup.cfg
doc/sandbox-guide/: setup.cfg
doc/sdk-guide/: setup.cfg
doc/user-guide/: setup.cfg
doc/vagrant-box/: setup.cfg
tools/: build-all-rst.sh  build-all.sh  build-components.py  build-install-guides-rst.sh  build-rst.sh  gen-vars.py  www-gen.py
www/: index.html
www/templates/: css.tmpl  footer.tmpl  google_analytics.tmpl  header.tmpl  indexbase.tmpl  js.tmpl
(+159 files in other folders)
