[metadata]
name = openiodeployment
summary = OpenIO Deployment Guide
author = OpenIO
author-email = support@openio.io
home-page = http://docs.openio.io/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]


[build-sphinx]
all_files = 1
build-dir = build
source-dir = source

[wheel]
universal = 1

[pbr]
warnerrors = True
