[metadata]
name = openioinstallguide
summary = OpenIO Installation Guides
author = OpenIO
author-email = support@openio.io
home-page = http://docs.openio.io/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Topic :: Documentation


[files]


[build-sphinx]
all_files = 1
build-dir = build
source-dir = source

[wheel]
universal = 1
